# aeregui

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example1.cpp
include/: aeregui.h  box.h  button.h  common.h  context.h  gridlist.h  listitem.h  row.h  screen.h  shader.h  texgui.h  textinput.h  types.h  widget.h  window.h
include/glad/: gl.h  glad.h
include/src/: CMakeLists.txt  glad.c
resources/shaders/: aeregui_shaders.hpp  texgui_shaders.hpp
src/: CMakeLists.txt  aeregui.c  box.cpp  button.cpp  button.h  column.cpp  column.h  common.h  context.cpp  context.h  defaults.h  example1.cpp  font.h  gridlist.h  image.cpp  listitem.cpp  listitem.h  row.cpp  row.h  screen.cpp  screen.h  shader.h  shader_impl.cpp  textinput.cpp  textinput.h  types.h  uicontext.cpp  uicontext.h  util.h  widget.cpp  widget.h  window.cpp  window.h
